--- a/src/image-gallery-custom.css
+++ b/src/image-gallery-custom.css
@@ -59,6 +59,10 @@
 }
 
 .image-gallery-content.fullscreen .image-gallery-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
   height: 100%;
 }
@@ -137,21 +141,30 @@
   content: '✖';
   cursor: pointer;
   position: absolute;
+  top: 10%;
   right: 0;
-  top: 0;
   font-size: 20px;
-  padding: 20px;
-  z-index: 1;
+  padding: 24px;
+  z-index: 2;
   line-height: .7;
   display: block;
   color: #fff;
-  z-index: 2;
 }
 
 .video-wrapper {
   position: relative;
   padding: 33.35% 0; /* 16:9 */
+  width: 100%;
   height: 0;
+  align-self: center;
+}
+
+.image-gallery-content:not(.fullscreen) .video-wrapper {
+  margin-top: -66.66667%;
+}
+
+.image-gallery-content.fullscreen .video-wrapper {
+
 }
 
 .video-wrapper iframe {
