Appy Trip Video

--- a/src/image-gallery-custom.css
+++ b/src/image-gallery-custom.css
@@ -13,7 +13,8 @@
 }
 
 /*.image-gallery-image */
-.image-gallery-slide.portrait {
+.image-gallery-slide.portrait,
+.image-gallery-slide.video{
   background-color: black;
 }
 
